<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/art_row_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/art_row_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="4dp"
            android:text="@string/art_row_title"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/art_row_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="4dp"
            android:text="@string/art_row_artist"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/art_row_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="4dp"
            android:text="@string/art_row_year"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>